cmake_minimum_required(VERSION 3.2)
project(Raptor)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    build/CMakeFiles/3.2.3/CompilerIdC/CMakeCCompilerId.c
    build/CMakeFiles/3.2.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
    build/CMakeFiles/feature_tests.c
    build/CMakeFiles/feature_tests.cxx
    include/assimp/Compiler/poppack1.h
    include/assimp/Compiler/pstdint.h
    include/assimp/Compiler/pushpack1.h
    include/assimp/ai_assert.h
    include/assimp/anim.h
    include/assimp/camera.h
    include/assimp/cexport.h
    include/assimp/cfileio.h
    include/assimp/cimport.h
    include/assimp/color4.h
    include/assimp/config.h
    include/assimp/DefaultLogger.hpp
    include/assimp/defs.h
    include/assimp/Exporter.hpp
    include/assimp/Importer.hpp
    include/assimp/importerdesc.h
    include/assimp/IOStream.hpp
    include/assimp/IOSystem.hpp
    include/assimp/light.h
    include/assimp/Logger.hpp
    include/assimp/LogStream.hpp
    include/assimp/material.h
    include/assimp/matrix3x3.h
    include/assimp/matrix4x4.h
    include/assimp/mesh.h
    include/assimp/metadata.h
    include/assimp/NullLogger.hpp
    include/assimp/postprocess.h
    include/assimp/ProgressHandler.hpp
    include/assimp/quaternion.h
    include/assimp/scene.h
    include/assimp/texture.h
    include/assimp/types.h
    include/assimp/vector2.h
    include/assimp/vector3.h
    include/assimp/version.h
    include/cereal/archives/adapters.hpp
    include/cereal/archives/binary.hpp
    include/cereal/archives/json.hpp
    include/cereal/archives/portable_binary.hpp
    include/cereal/archives/xml.hpp
    include/cereal/details/helpers.hpp
    include/cereal/details/polymorphic_impl.hpp
    include/cereal/details/static_object.hpp
    include/cereal/details/traits.hpp
    include/cereal/details/util.hpp
    include/cereal/external/rapidjson/internal/pow10.h
    include/cereal/external/rapidjson/internal/stack.h
    include/cereal/external/rapidjson/internal/strfunc.h
    include/cereal/external/rapidjson/document.h
    include/cereal/external/rapidjson/filestream.h
    include/cereal/external/rapidjson/genericstream.h
    include/cereal/external/rapidjson/prettywriter.h
    include/cereal/external/rapidjson/rapidjson.h
    include/cereal/external/rapidjson/reader.h
    include/cereal/external/rapidjson/stringbuffer.h
    include/cereal/external/rapidjson/writer.h
    include/cereal/external/rapidxml/rapidxml.hpp
    include/cereal/external/rapidxml/rapidxml_iterators.hpp
    include/cereal/external/rapidxml/rapidxml_print.hpp
    include/cereal/external/rapidxml/rapidxml_utils.hpp
    include/cereal/external/base64.hpp
    include/cereal/types/array.hpp
    include/cereal/types/base_class.hpp
    include/cereal/types/bitset.hpp
    include/cereal/types/boost_variant.hpp
    include/cereal/types/chrono.hpp
    include/cereal/types/common.hpp
    include/cereal/types/complex.hpp
    include/cereal/types/deque.hpp
    include/cereal/types/forward_list.hpp
    include/cereal/types/list.hpp
    include/cereal/types/map.hpp
    include/cereal/types/memory.hpp
    include/cereal/types/polymorphic.hpp
    include/cereal/types/queue.hpp
    include/cereal/types/set.hpp
    include/cereal/types/stack.hpp
    include/cereal/types/string.hpp
    include/cereal/types/tuple.hpp
    include/cereal/types/unordered_map.hpp
    include/cereal/types/unordered_set.hpp
    include/cereal/types/utility.hpp
    include/cereal/types/valarray.hpp
    include/cereal/types/vector.hpp
    include/cereal/access.hpp
    include/cereal/cereal.hpp
    include/cereal/macros.hpp
    include/freetype/config/ftconfig.h
    include/freetype/config/ftheader.h
    include/freetype/config/ftmodule.h
    include/freetype/config/ftoption.h
    include/freetype/config/ftstdlib.h
    include/freetype/freetype.h
    include/freetype/ft2build.h
    include/freetype/ftadvanc.h
    include/freetype/ftautoh.h
    include/freetype/ftbbox.h
    include/freetype/ftbdf.h
    include/freetype/ftbitmap.h
    include/freetype/ftbzip2.h
    include/freetype/ftcache.h
    include/freetype/ftchapters.h
    include/freetype/ftcid.h
    include/freetype/fterrdef.h
    include/freetype/fterrors.h
    include/freetype/ftgasp.h
    include/freetype/ftglyph.h
    include/freetype/ftgxval.h
    include/freetype/ftgzip.h
    include/freetype/ftimage.h
    include/freetype/ftincrem.h
    include/freetype/ftlcdfil.h
    include/freetype/ftlist.h
    include/freetype/ftlzw.h
    include/freetype/ftmac.h
    include/freetype/ftmm.h
    include/freetype/ftmodapi.h
    include/freetype/ftmoderr.h
    include/freetype/ftotval.h
    include/freetype/ftoutln.h
    include/freetype/ftpfr.h
    include/freetype/ftrender.h
    include/freetype/ftsizes.h
    include/freetype/ftsnames.h
    include/freetype/ftstroke.h
    include/freetype/ftsynth.h
    include/freetype/ftsystem.h
    include/freetype/fttrigon.h
    include/freetype/fttypes.h
    include/freetype/ftwinfnt.h
    include/freetype/ftxf86.h
    include/freetype/t1tables.h
    include/freetype/ttnameid.h
    include/freetype/tttables.h
    include/freetype/tttags.h
    include/freetype/ttunpat.h
    include/GL/glew.h
    include/GL/glxew.h
    include/GL/wglew.h
    include/GLFW/glfw3.h
    include/GLFW/glfw3native.h
    include/glm/detail/_features.hpp
    include/glm/detail/_fixes.hpp
    include/glm/detail/_noise.hpp
    include/glm/detail/_swizzle.hpp
    include/glm/detail/_swizzle_func.hpp
    include/glm/detail/_vectorize.hpp
    include/glm/detail/dummy.cpp
    include/glm/detail/func_common.hpp
    include/glm/detail/func_exponential.hpp
    include/glm/detail/func_geometric.hpp
    include/glm/detail/func_integer.hpp
    include/glm/detail/func_matrix.hpp
    include/glm/detail/func_noise.hpp
    include/glm/detail/func_packing.hpp
    include/glm/detail/func_trigonometric.hpp
    include/glm/detail/func_vector_relational.hpp
    include/glm/detail/glm.cpp
    include/glm/detail/intrinsic_common.hpp
    include/glm/detail/intrinsic_exponential.hpp
    include/glm/detail/intrinsic_geometric.hpp
    include/glm/detail/intrinsic_integer.hpp
    include/glm/detail/intrinsic_matrix.hpp
    include/glm/detail/intrinsic_trigonometric.hpp
    include/glm/detail/intrinsic_vector_relational.hpp
    include/glm/detail/precision.hpp
    include/glm/detail/setup.hpp
    include/glm/detail/type_float.hpp
    include/glm/detail/type_gentype.hpp
    include/glm/detail/type_half.hpp
    include/glm/detail/type_int.hpp
    include/glm/detail/type_mat.hpp
    include/glm/detail/type_mat2x2.hpp
    include/glm/detail/type_mat2x3.hpp
    include/glm/detail/type_mat2x4.hpp
    include/glm/detail/type_mat3x2.hpp
    include/glm/detail/type_mat3x3.hpp
    include/glm/detail/type_mat3x4.hpp
    include/glm/detail/type_mat4x2.hpp
    include/glm/detail/type_mat4x3.hpp
    include/glm/detail/type_mat4x4.hpp
    include/glm/detail/type_vec.hpp
    include/glm/detail/type_vec1.hpp
    include/glm/detail/type_vec2.hpp
    include/glm/detail/type_vec3.hpp
    include/glm/detail/type_vec4.hpp
    include/glm/gtc/bitfield.hpp
    include/glm/gtc/constants.hpp
    include/glm/gtc/epsilon.hpp
    include/glm/gtc/integer.hpp
    include/glm/gtc/matrix_access.hpp
    include/glm/gtc/matrix_integer.hpp
    include/glm/gtc/matrix_inverse.hpp
    include/glm/gtc/matrix_transform.hpp
    include/glm/gtc/noise.hpp
    include/glm/gtc/packing.hpp
    include/glm/gtc/quaternion.hpp
    include/glm/gtc/random.hpp
    include/glm/gtc/reciprocal.hpp
    include/glm/gtc/round.hpp
    include/glm/gtc/type_precision.hpp
    include/glm/gtc/type_ptr.hpp
    include/glm/gtc/ulp.hpp
    include/glm/gtc/vec1.hpp
    include/glm/gtx/associated_min_max.hpp
    include/glm/gtx/bit.hpp
    include/glm/gtx/closest_point.hpp
    include/glm/gtx/color_space.hpp
    include/glm/gtx/color_space_YCoCg.hpp
    include/glm/gtx/common.hpp
    include/glm/gtx/compatibility.hpp
    include/glm/gtx/component_wise.hpp
    include/glm/gtx/dual_quaternion.hpp
    include/glm/gtx/euler_angles.hpp
    include/glm/gtx/extend.hpp
    include/glm/gtx/extented_min_max.hpp
    include/glm/gtx/fast_exponential.hpp
    include/glm/gtx/fast_square_root.hpp
    include/glm/gtx/fast_trigonometry.hpp
    include/glm/gtx/gradient_paint.hpp
    include/glm/gtx/handed_coordinate_space.hpp
    include/glm/gtx/integer.hpp
    include/glm/gtx/intersect.hpp
    include/glm/gtx/io.hpp
    include/glm/gtx/log_base.hpp
    include/glm/gtx/matrix_cross_product.hpp
    include/glm/gtx/matrix_decompose.hpp
    include/glm/gtx/matrix_interpolation.hpp
    include/glm/gtx/matrix_major_storage.hpp
    include/glm/gtx/matrix_operation.hpp
    include/glm/gtx/matrix_query.hpp
    include/glm/gtx/matrix_transform_2d.hpp
    include/glm/gtx/mixed_product.hpp
    include/glm/gtx/multiple.hpp
    include/glm/gtx/norm.hpp
    include/glm/gtx/normal.hpp
    include/glm/gtx/normalize_dot.hpp
    include/glm/gtx/number_precision.hpp
    include/glm/gtx/optimum_pow.hpp
    include/glm/gtx/orthonormalize.hpp
    include/glm/gtx/perpendicular.hpp
    include/glm/gtx/polar_coordinates.hpp
    include/glm/gtx/projection.hpp
    include/glm/gtx/quaternion.hpp
    include/glm/gtx/range.hpp
    include/glm/gtx/raw_data.hpp
    include/glm/gtx/rotate_normalized_axis.hpp
    include/glm/gtx/rotate_vector.hpp
    include/glm/gtx/scalar_multiplication.hpp
    include/glm/gtx/scalar_relational.hpp
    include/glm/gtx/simd_mat4.hpp
    include/glm/gtx/simd_quat.hpp
    include/glm/gtx/simd_vec4.hpp
    include/glm/gtx/spline.hpp
    include/glm/gtx/std_based_type.hpp
    include/glm/gtx/string_cast.hpp
    include/glm/gtx/transform.hpp
    include/glm/gtx/transform2.hpp
    include/glm/gtx/type_aligned.hpp
    include/glm/gtx/vector_angle.hpp
    include/glm/gtx/vector_query.hpp
    include/glm/gtx/wrap.hpp
    include/glm/common.hpp
    include/glm/exponential.hpp
    include/glm/ext.hpp
    include/glm/fwd.hpp
    include/glm/geometric.hpp
    include/glm/glm.hpp
    include/glm/integer.hpp
    include/glm/mat2x2.hpp
    include/glm/mat2x3.hpp
    include/glm/mat2x4.hpp
    include/glm/mat3x2.hpp
    include/glm/mat3x3.hpp
    include/glm/mat3x4.hpp
    include/glm/mat4x2.hpp
    include/glm/mat4x3.hpp
    include/glm/mat4x4.hpp
    include/glm/matrix.hpp
    include/glm/packing.hpp
    include/glm/trigonometric.hpp
    include/glm/vec2.hpp
    include/glm/vec3.hpp
    include/glm/vec4.hpp
    include/glm/vector_relational.hpp
    include/SDL2/begin_code.h
    include/SDL2/close_code.h
    include/SDL2/SDL.h
    include/SDL2/SDL_assert.h
    include/SDL2/SDL_atomic.h
    include/SDL2/SDL_audio.h
    include/SDL2/SDL_bits.h
    include/SDL2/SDL_blendmode.h
    include/SDL2/SDL_clipboard.h
    include/SDL2/SDL_config.h
    include/SDL2/SDL_cpuinfo.h
    include/SDL2/SDL_endian.h
    include/SDL2/SDL_error.h
    include/SDL2/SDL_events.h
    include/SDL2/SDL_filesystem.h
    include/SDL2/SDL_gamecontroller.h
    include/SDL2/SDL_gesture.h
    include/SDL2/SDL_haptic.h
    include/SDL2/SDL_hints.h
    include/SDL2/SDL_image.h
    include/SDL2/SDL_joystick.h
    include/SDL2/SDL_keyboard.h
    include/SDL2/SDL_keycode.h
    include/SDL2/SDL_loadso.h
    include/SDL2/SDL_log.h
    include/SDL2/SDL_main.h
    include/SDL2/SDL_messagebox.h
    include/SDL2/SDL_mixer.h
    include/SDL2/SDL_mouse.h
    include/SDL2/SDL_mutex.h
    include/SDL2/SDL_name.h
    include/SDL2/SDL_net.h
    include/SDL2/SDL_opengl.h
    include/SDL2/SDL_opengles.h
    include/SDL2/SDL_opengles2.h
    include/SDL2/SDL_pixels.h
    include/SDL2/SDL_platform.h
    include/SDL2/SDL_power.h
    include/SDL2/SDL_quit.h
    include/SDL2/SDL_rect.h
    include/SDL2/SDL_render.h
    include/SDL2/SDL_revision.h
    include/SDL2/SDL_rwops.h
    include/SDL2/SDL_scancode.h
    include/SDL2/SDL_shape.h
    include/SDL2/SDL_stdinc.h
    include/SDL2/SDL_surface.h
    include/SDL2/SDL_system.h
    include/SDL2/SDL_syswm.h
    include/SDL2/SDL_test.h
    include/SDL2/SDL_test_assert.h
    include/SDL2/SDL_test_common.h
    include/SDL2/SDL_test_compare.h
    include/SDL2/SDL_test_crc32.h
    include/SDL2/SDL_test_font.h
    include/SDL2/SDL_test_fuzzer.h
    include/SDL2/SDL_test_harness.h
    include/SDL2/SDL_test_images.h
    include/SDL2/SDL_test_log.h
    include/SDL2/SDL_test_md5.h
    include/SDL2/SDL_test_random.h
    include/SDL2/SDL_thread.h
    include/SDL2/SDL_timer.h
    include/SDL2/SDL_touch.h
    include/SDL2/SDL_types.h
    include/SDL2/SDL_version.h
    include/SDL2/SDL_video.h
    src/Box2D/Collision/Shapes/b2ChainShape.cpp
    src/Box2D/Collision/Shapes/b2ChainShape.h
    src/Box2D/Collision/Shapes/b2CircleShape.cpp
    src/Box2D/Collision/Shapes/b2CircleShape.h
    src/Box2D/Collision/Shapes/b2EdgeShape.cpp
    src/Box2D/Collision/Shapes/b2EdgeShape.h
    src/Box2D/Collision/Shapes/b2PolygonShape.cpp
    src/Box2D/Collision/Shapes/b2PolygonShape.h
    src/Box2D/Collision/Shapes/b2Shape.h
    src/Box2D/Collision/b2BroadPhase.cpp
    src/Box2D/Collision/b2BroadPhase.h
    src/Box2D/Collision/b2CollideCircle.cpp
    src/Box2D/Collision/b2CollideEdge.cpp
    src/Box2D/Collision/b2CollidePolygon.cpp
    src/Box2D/Collision/b2Collision.cpp
    src/Box2D/Collision/b2Collision.h
    src/Box2D/Collision/b2Distance.cpp
    src/Box2D/Collision/b2Distance.h
    src/Box2D/Collision/b2DynamicTree.cpp
    src/Box2D/Collision/b2DynamicTree.h
    src/Box2D/Collision/b2TimeOfImpact.cpp
    src/Box2D/Collision/b2TimeOfImpact.h
    src/Box2D/Common/b2BlockAllocator.cpp
    src/Box2D/Common/b2BlockAllocator.h
    src/Box2D/Common/b2Draw.cpp
    src/Box2D/Common/b2Draw.h
    src/Box2D/Common/b2GrowableStack.h
    src/Box2D/Common/b2Math.cpp
    src/Box2D/Common/b2Math.h
    src/Box2D/Common/b2Settings.cpp
    src/Box2D/Common/b2Settings.h
    src/Box2D/Common/b2StackAllocator.cpp
    src/Box2D/Common/b2StackAllocator.h
    src/Box2D/Common/b2Timer.cpp
    src/Box2D/Common/b2Timer.h
    src/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp
    src/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.h
    src/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp
    src/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.h
    src/Box2D/Dynamics/Contacts/b2CircleContact.cpp
    src/Box2D/Dynamics/Contacts/b2CircleContact.h
    src/Box2D/Dynamics/Contacts/b2Contact.cpp
    src/Box2D/Dynamics/Contacts/b2Contact.h
    src/Box2D/Dynamics/Contacts/b2ContactSolver.cpp
    src/Box2D/Dynamics/Contacts/b2ContactSolver.h
    src/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp
    src/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.h
    src/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp
    src/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.h
    src/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp
    src/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.h
    src/Box2D/Dynamics/Contacts/b2PolygonContact.cpp
    src/Box2D/Dynamics/Contacts/b2PolygonContact.h
    src/Box2D/Dynamics/Joints/b2DistanceJoint.cpp
    src/Box2D/Dynamics/Joints/b2DistanceJoint.h
    src/Box2D/Dynamics/Joints/b2FrictionJoint.cpp
    src/Box2D/Dynamics/Joints/b2FrictionJoint.h
    src/Box2D/Dynamics/Joints/b2GearJoint.cpp
    src/Box2D/Dynamics/Joints/b2GearJoint.h
    src/Box2D/Dynamics/Joints/b2Joint.cpp
    src/Box2D/Dynamics/Joints/b2Joint.h
    src/Box2D/Dynamics/Joints/b2MotorJoint.cpp
    src/Box2D/Dynamics/Joints/b2MotorJoint.h
    src/Box2D/Dynamics/Joints/b2MouseJoint.cpp
    src/Box2D/Dynamics/Joints/b2MouseJoint.h
    src/Box2D/Dynamics/Joints/b2PrismaticJoint.cpp
    src/Box2D/Dynamics/Joints/b2PrismaticJoint.h
    src/Box2D/Dynamics/Joints/b2PulleyJoint.cpp
    src/Box2D/Dynamics/Joints/b2PulleyJoint.h
    src/Box2D/Dynamics/Joints/b2RevoluteJoint.cpp
    src/Box2D/Dynamics/Joints/b2RevoluteJoint.h
    src/Box2D/Dynamics/Joints/b2RopeJoint.cpp
    src/Box2D/Dynamics/Joints/b2RopeJoint.h
    src/Box2D/Dynamics/Joints/b2WeldJoint.cpp
    src/Box2D/Dynamics/Joints/b2WeldJoint.h
    src/Box2D/Dynamics/Joints/b2WheelJoint.cpp
    src/Box2D/Dynamics/Joints/b2WheelJoint.h
    src/Box2D/Dynamics/b2Body.cpp
    src/Box2D/Dynamics/b2Body.h
    src/Box2D/Dynamics/b2ContactManager.cpp
    src/Box2D/Dynamics/b2ContactManager.h
    src/Box2D/Dynamics/b2Fixture.cpp
    src/Box2D/Dynamics/b2Fixture.h
    src/Box2D/Dynamics/b2Island.cpp
    src/Box2D/Dynamics/b2Island.h
    src/Box2D/Dynamics/b2TimeStep.h
    src/Box2D/Dynamics/b2World.cpp
    src/Box2D/Dynamics/b2World.h
    src/Box2D/Dynamics/b2WorldCallbacks.cpp
    src/Box2D/Dynamics/b2WorldCallbacks.h
    src/Box2D/Rope/b2Rope.cpp
    src/Box2D/Rope/b2Rope.h
    src/Box2D/Box2D.h
    src/Engine/Application/Application.hpp
    src/Engine/Application/Array.hpp
    src/Engine/Application/EmscriptenApplication.cpp
    src/Engine/Application/GLFWApplication.cpp
    src/Engine/Application/GLFWApplication.hpp
    src/Engine/Application/IApplication.hpp
    src/Engine/Application/SDLApplication.cpp
    src/Engine/Assets/IAssetLoader.cpp
    src/Engine/Assets/IAssetLoader.hpp
    src/Engine/Assets/LoadShaderTask.cpp
    src/Engine/Assets/LoadShaderTask.hpp
    src/Engine/Assets/ModelLoader.cpp
    src/Engine/Assets/ModelLoader.hpp
    src/Engine/Base/MeshComponent.hpp
    src/Engine/Base/ModelComponent.hpp
    src/Engine/Base/PhysicsSystem2D.cpp
    src/Engine/Base/PhysicsSystem2D.hpp
    src/Engine/Base/RenderSystem2D.cpp
    src/Engine/Base/RenderSystem2D.hpp
    src/Engine/Base/RenderSystem3D.cpp
    src/Engine/Base/RenderSystem3D.hpp
    src/Engine/Base/SpriteComponent.hpp
    src/Engine/Base/SpriteData.hpp
    src/Engine/Base/TextComponent.hpp
    src/Engine/Base/Transform2D.hpp
    src/Engine/Base/Transform3D.hpp
    src/Engine/Core/AssetManager.cpp
    src/Engine/Core/AssetManager.hpp
    src/Engine/Core/Common.hpp
    src/Engine/Core/InputListener.hpp
    src/Engine/Core/IScene.hpp
    src/Engine/Core/IService.hpp
    src/Engine/Core/Network.cpp
    src/Engine/Core/Network.hpp
    src/Engine/Core/TaskManager.cpp
    src/Engine/Core/TaskManager.hpp
    src/Engine/ECS/Component.hpp
    src/Engine/ECS/ComponentBlock.cpp
    src/Engine/ECS/ComponentBlock.hpp
    src/Engine/ECS/ComponentType.hpp
    src/Engine/ECS/ECSManager.cpp
    src/Engine/ECS/ECSManager.hpp
    src/Engine/ECS/ISystem.hpp
    src/Engine/Graphics/Camera.cpp
    src/Engine/Graphics/Camera.hpp
    src/Engine/Graphics/Color.hpp
    src/Engine/Graphics/DEBUGRenderer.cpp
    src/Engine/Graphics/DEBUGRenderer.hpp
    src/Engine/Graphics/Font.cpp
    src/Engine/Graphics/Font.hpp
    src/Engine/Graphics/GLSLProgram.cpp
    src/Engine/Graphics/GLSLProgram.hpp
    src/Engine/Graphics/GLTexture.cpp
    src/Engine/Graphics/GLTexture.hpp
    src/Engine/Graphics/Light.cpp
    src/Engine/Graphics/Light.hpp
    src/Engine/Graphics/Model.cpp
    src/Engine/Graphics/Model.hpp
    src/Engine/Graphics/Pixmap.hpp
    src/Engine/Graphics/Skybox.cpp
    src/Engine/Graphics/Skybox.hpp
    src/Engine/Graphics/Texture.cpp
    src/Engine/Graphics/Texture.hpp
    src/Engine/Graphics/Vertex2D.hpp
    src/Engine/Graphics/Vertex3D.hpp
    src/Engine/Math/GeometryUtils.cpp
    src/Engine/Math/GeometryUtils.hpp
    src/Engine/Math/MarchingCubes.cpp
    src/Engine/Math/MathUtils.hpp
    src/Engine/Math/Matrix4.cpp
    src/Engine/Math/Matrix4.hpp
    src/Engine/Math/Noise.cpp
    src/Engine/Math/Noise.hpp
    src/Engine/Math/Quadtree.cpp
    src/Engine/Math/Quadtree.hpp
    src/Engine/Math/Random.cpp
    src/Engine/Math/Random.hpp
    src/Engine/Math/Rectangle.cpp
    src/Engine/Math/Rectangle.hpp
    src/Engine/Math/Source.cpp
    src/Engine/Math/Vector2.cpp
    src/Engine/Math/Vector2.hpp
    src/Engine/Math/Vector3.cpp
    src/Engine/Math/Vector3.hpp
    src/Engine/Memory/ObjectAllocator.hpp
    src/Engine/Platform/ImGui.cpp
    src/Engine/Platform/ImGui.hpp
    src/Engine/UI/Canvas.cpp
    src/Engine/UI/Canvas.hpp
    src/Engine/UI/Group.cpp
    src/Engine/UI/Group.hpp
    src/Engine/UI/Label.cpp
    src/Engine/UI/Label.hpp
    src/Engine/UI/Table.cpp
    src/Engine/UI/Table.hpp
    src/Engine/UI/TextField.cpp
    src/Engine/UI/TextField.hpp
    src/Engine/UI/Widget.cpp
    src/Engine/UI/Widget.hpp
    src/Engine/Utils/CommonScene.cpp
    src/Engine/Utils/CommonScene.hpp
    src/Engine/Utils/DebugCanvas.cpp
    src/Engine/Utils/DebugCanvas.hpp
    src/Engine/Utils/FPSCamera.cpp
    src/Engine/Utils/FPSCamera.hpp
    src/Engine/Utils/IO.cpp
    src/Engine/Utils/IO.hpp
    src/Engine/Utils/UnorderedArray.hpp
    src/imgui/examples/directx11_example/imgui_impl_dx11.cpp
    src/imgui/examples/directx11_example/imgui_impl_dx11.h
    src/imgui/examples/directx11_example/main.cpp
    src/imgui/examples/directx9_example/imgui_impl_dx9.cpp
    src/imgui/examples/directx9_example/imgui_impl_dx9.h
    src/imgui/examples/directx9_example/main.cpp
    src/imgui/examples/libs/gl3w/GL/gl3w.c
    src/imgui/examples/libs/gl3w/GL/gl3w.h
    src/imgui/examples/libs/gl3w/GL/glcorearb.h
    src/imgui/examples/libs/glfw/include/GLFW/glfw3.h
    src/imgui/examples/libs/glfw/include/GLFW/glfw3native.h
    src/imgui/examples/opengl3_example/imgui_impl_glfw_gl3.cpp
    src/imgui/examples/opengl3_example/imgui_impl_glfw_gl3.h
    src/imgui/examples/opengl3_example/main.cpp
    src/imgui/examples/opengl_example/imgui_impl_glfw.cpp
    src/imgui/examples/opengl_example/imgui_impl_glfw.h
    src/imgui/examples/opengl_example/main.cpp
    src/imgui/extra_fonts/binary_to_compressed_c.cpp
    src/imgui/imconfig.h
    src/imgui/imgui.cpp
    src/imgui/imgui.h
    src/imgui/stb_rect_pack.h
    src/imgui/stb_textedit.h
    src/imgui/stb_truetype.h
    src/Membrane/CelestialBody.cpp
    src/Membrane/CelestialBody.h
    src/Membrane/GLSandBoxScene.cpp
    src/Membrane/GLSandBoxScene.h
    src/Membrane/LODQuadtree.cpp
    src/Membrane/LODQuadtree.h
    src/Membrane/LODScene.cpp
    src/Membrane/LODScene.h
    src/Membrane/Main.cpp
    src/Membrane/SpaceScene.cpp
    src/Membrane/SpaceScene.hpp
    src/Membrane/UICanvasTestScene.cpp
    src/Membrane/UICanvasTestScene.h
    src/Membrane/Universe.cpp
    src/Membrane/Universe.h
    src/Tests/ECSTestScene.cpp
    src/Tests/ECSTestScene.h
    src/Tests/emtest.cpp
    src/Tests/GLArrayTexture.cpp
    src/Tests/Main.cpp
    src/Tests/NetworkTest.cpp
    src/Tests/TerrainQuadTree.cpp
    src/Tests/TerrainQuadTree.h
    src/Tests/TerrainScene.cpp
    src/Tests/TerrainScene.h
    src/Tools/Main.cpp
    src/Tools/ModelViewerScene.cpp
    src/Tools/ModelViewerScene.h
    src/Tools/NoiseScene.cpp
    src/Tools/NoiseScene.h
    src/VoxelGame/VoxelChunk.cpp
    src/VoxelGame/VoxelChunk.h
    src/VoxelGame/VoxelTerrain.cpp
    src/VoxelGame/VoxelTerrain.h)

add_executable(Raptor ${SOURCE_FILES})