file(GLOB ENGINE_APP_SRCS Application/*.cpp)
file(GLOB ENGINE_ASSETS_SRCS Assets/*.cpp)
file(GLOB ENGINE_COMPONENTS_SRCS Components/*.cpp)
file(GLOB ENGINE_CORE_SRCS Core/*.cpp)
file(GLOB ENGINE_GRAPHICS_SRCS Graphics/*.cpp)
file(GLOB ENGINE_GRAPHICS_GL_SRCS Graphics/GL/*.cpp)
file(GLOB ENGINE_MATH_SRCS Math/*.cpp)
file(GLOB ENGINE_MEMORY_SRCS Memory/*.cpp)
file(GLOB ENGINE_PLATFORM_SRCS Platform/*.cpp)
file(GLOB ENGINE_SYSTEMS_SRCS Systems/*.cpp)
file(GLOB ENGINE_UI_SRCS UI/*.cpp)
file(GLOB ENGINE_UTILS_SRCS Utils/*.cpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(RaptorCore STATIC
  ${ENGINE_APP_SRCS}
  ${ENGINE_ASSETS_SRCS}
  ${ENGINE_COMPONENTS_SRCS}
  ${ENGINE_CORE_SRCS}
  ${ENGINE_GRAPHICS_SRCS}
  ${ENGINE_GRAPHICS_GL_SRCS}
  ${ENGINE_MATH_SRCS}
  ${ENGINE_MEMORY_SRCS}
  ${ENGINE_PLATFORM_SRCS}
  ${ENGINE_SYSTEMS_SRCS}
  ${ENGINE_UI_SRCS}
  ${ENGINE_UTILS_SRCS}
)
